--- a/save_the_date/index.html
+++ b/save_the_date/index.html
@@ -22,9 +22,12 @@
         <div class="row align-self-center px-md-5 px-sm-3 mx-auto pb-5  pt-5">
             <div class="col-sm-12">
                 <div class="embed-responsive embed-responsive-16by9">
-                    
+<!--                     
                     <iframe  class="embed-responsive-item video" src="https://www.youtube.com/embed/HLQ1cK9Edhc?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=1&autoplay=1"  allow="autoplay" allowfullscreen="true"></iframe>
-                
+                 -->
+                 <video class="embed-responsive-item video" controls autoplay="autoplay" muted>
+                  <source src="video/all_star.mp4" type="video/mp4">
+                 </video>
                   </div>
                </div>
             <div class="col-md-10 offset-md-1 col-sm-12 ">
@@ -66,16 +69,16 @@
     $(".first").addClass(" animate__animated animate__jackInTheBox ");
     $(".first").show();
 
-  }  , 19000 );
+  }  , 18000 );
 
   setTimeout( function(){ 
   $(".second").addClass(" animate__animated animate__tada ");
   $(".second").show();
-  }  , 21000 );
+  }  , 20000 );
 
   setTimeout( function(){ 
   $(".third").show();
-  }  , 23000 );
+  }  , 22000 );
     </script>
 </body>
 </html>
