--- a/save_the_date/index.html
+++ b/save_the_date/index.html
@@ -65,7 +65,7 @@
   $(".third").hide();
 
   document.onreadystatechange = function () {
-  if (document.readyState === 'interactive') {
+  if (document.readyState === 'complete') {
 
  
  console.log("hi");
