--- a/save_the_date/index.html
+++ b/save_the_date/index.html
@@ -39,7 +39,7 @@
                 <h2 class="special-comic-sans third animate__animated animate__heartBeat   animate__infinite	infinite">Tyler & Aleks</h2>
                 <p class="third"> Unfortunately, we are having a smaller ceremony so we won’t be able to invite everyone we would have liked to. We’ll be sending out invites this week and our love and apologies to anyone who would have enjoyed joining us in our celebration that we couldn’t fit in.</p>
        
-                <p class="third">However, you can still join us on our online steam!</p>
+                <p class="third">However, you can still join us on our online stream!</p>
                 <p class="third">
                     If you’re interested, please enter your name and email in the form down below so we can send you more details closer to the date:</p>
                     </div>
